# MrHandly

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: agent-release.yml  ci.yml
agent/: Makefile  go.mod  go.sum
agent/cmd/oikos-agent/: main.go
agent/internal/api/: api.go  api_test.go  docker.go  docker_test.go  processes.go  processes_test.go  services.go  services_stream_test.go  services_test.go  sse.go
agent/internal/audit/: audit.go  audit_test.go
agent/internal/config/: bindguard.go  bindguard_test.go  config.go  config_test.go  duration.go
agent/internal/docker/: client.go  client_test.go  logs.go  logs_test.go  testdaemon_test.go
agent/internal/fingerprint/: fingerprint.go  fingerprint_test.go
agent/internal/journal/: journal.go  journal_test.go
agent/internal/metrics/: collector.go  collector_bench_test.go  collector_test.go  process_collector.go  process_collector_test.go
agent/internal/procfs/: parse.go  process.go  process_test.go  procfs.go  procfs_bench_test.go  procfs_test.go
agent/internal/protocol/: types.go
agent/internal/sampler/: event_source.go  event_source_test.go  sampler.go  sampler_bench_test.go  sampler_test.go
agent/internal/systemd/: conn.go  dbus.go  fake.go  service.go  service_test.go
agent/testdata/docker/: containers.json  images.json
deploy/: agent.example.toml  oikos-agent.service
desktop/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/core/: Cargo.toml
desktop/core/src/: client.rs  error.rs  lib.rs  peers.rs  types.rs
desktop/src/: App.tsx  bridge.ts  constants.ts  format.ts  index.css  ssh.ts  store.ts  theme-colors.ts  theme.ts  types.ts  ui.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: CommandPalette.tsx  DataTable.tsx  Led.tsx  (+15 more)
docs/: ROADMAP.md  SECURITY.md
(+13 files in other folders)
