[package]
name = "oikos-core"
version = "0.0.0"
edition = "2021"
publish = false

# The desktop app's aggregation logic: the peer list, the agent HTTP/SSE
# client, and the shared wire types. It has NO Tauri or webkit dependency, so it
# builds and tests in any CI or sandbox — only src-tauri needs the GUI toolkit.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros"] }
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
